align fix

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -52,8 +52,10 @@
 
 #resumegraphic {
   max-width: 100%;
+  min-width 300px; 
   height: auto;
   float: none;
+  display: block;
   margin-left: auto;
   margin-right: auto;
 }
